# crustyring

./: .dockerignore  Cargo.toml  README.md  build.rs  spawn.sh
clusters/: Dockerfile.client  Dockerfile.dht  Dockerfile.registry  docker-compose.yml
proto/: dht.proto  registry.proto
src/: error.rs  hash.rs  lib.rs  rpc.rs
src/client/: main.rs
src/dht/: service.rs  store.rs
src/dht/server/: main.rs
src/master/: master.proto
src/registry/: manager.rs  mod.rs  registry.proto  service.rs
src/registry/server/: main.rs
