[package]
name = "crustyring"
description = "A simple DHT using consistent hashing where each node maintains a reference to the next and previous nodes on the hash ring."
version = "0.1.0"
edition = "2021"

[[bin]]
name = "registry"
path = "./src/registry/server/main.rs"

[[bin]]
name = "dht"
path = "./src/dht/server/main.rs"

[dependencies]
tempdir = "0.3"
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "*"
futures-core = "*"
async-trait = "*"
sha2 = "*"
hex-literal = "*"

[build-dependencies]
tonic-build = "0.9.2"
